Update AY1 - OOP 1.ipynb

--- a/Ayudantías/AY1/AY1 - OOP 1.ipynb
+++ b/Ayudantías/AY1/AY1 - OOP 1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -44,8 +44,8 @@
    "outputs": [],
    "source": [
     "class Animal:\n",
-    "    def __init__(self, nombre, tamano, especie):\n",
-    "        self.nombre = nombre\n",
+    "    def __init__(self , nombre, tamano, especie): #self se refiere a si mismo,\n",
+    "        self.nombre = nombre #ponemos self.algo\n",
     "        self.tamano = tamano\n",
     "        self.especie = especie\n",
     "\n",
@@ -73,19 +73,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tigre es un gato y pesa 10 kg.\n",
+      "Diego es un humano y pesa 60.4 kg.\n"
+     ]
+    }
+   ],
    "source": [
     "animal1 = Animal(\"Tigre\", 10, \"gato\")\n",
     "animal2 = Animal(\"Diego\", 60.4, \"humano\")\n",
     "\n",
     "print(f\"{animal1.nombre} es un {animal1.especie} y pesa {animal1.tamano} kg.\")\n",
     "print(f\"{animal2.nombre} es un {animal2.especie} y pesa {animal2.tamano} kg.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Humano es un Chalo y pesa 2 kg.\n"
+     ]
+    }
+   ],
+   "source": [
+    "Chalo = Animal(\"Humano\", 2,\"Chalo\")\n",
+    "print(f\"{Chalo.nombre} es un {Chalo.especie} y pesa {Chalo.tamano} kg.\")"
    ]
   },
   {
@@ -105,13 +132,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "miau miau\n",
+      "Tigre despues de comer pesa 11 kg.\n",
+      "ñamiii\n",
+      "Diego despues de comer pesa 63.4 kg.\n"
+     ]
+    }
+   ],
    "source": [
     "animal1.comer(1)\n",
     "print(f\"{animal1.nombre} despues de comer pesa {animal1.tamano} kg.\")\n",
@@ -144,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -169,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1463,7 +1501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
