Update AY1 - OOP 1.ipynb

--- a/Ayudantías/AY1/AY1 - OOP 1.ipynb
+++ b/Ayudantías/AY1/AY1 - OOP 1.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -207,13 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clave inválida\n"
+     ]
+    }
+   ],
    "source": [
     "persona2 = Persona(\"Daniela\", 20, 1.60, \"1234\")\n",
     "persona2.postear_en_facebook()"
@@ -232,13 +240,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Muajaja ya sabemos que tu clave secreta es 1234 ahora podremos publicar cosas en tu facebook!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Muajaja ya sabemos que tu clave secreta es\", persona2.clave_secreta,\"ahora podremos publicar cosas en tu facebook!\")"
    ]
@@ -278,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -304,13 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Foto posteada\n"
+     ]
+    }
+   ],
    "source": [
     "persona2 = Persona(\"Daniela\", 20, 1.60, \"1234\", \"123\")\n",
     "persona2.postear_en_facebook()"
@@ -329,13 +353,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Persona' object has no attribute '__clave_secreta'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\diego\\Documents\\GitHub\\Syllabus\\Ayudantías\\AY1\\AY1 - OOP 1.ipynb Cell 22'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/diego/Documents/GitHub/Syllabus/Ayudant%C3%ADas/AY1/AY1%20-%20OOP%201.ipynb#ch0000021?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mMuajaja ya sabemos que tu clave secreta es\u001b[39m\u001b[39m\"\u001b[39m, persona2\u001b[39m.\u001b[39;49m__clave_secreta)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Persona' object has no attribute '__clave_secreta'"
+     ]
+    }
+   ],
    "source": [
     "print(\"Muajaja ya sabemos que tu clave secreta es\", persona2.__clave_secreta) #Intentar con el guion bajo"
    ]
@@ -375,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -407,13 +443,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se han contratado 3 trabajadores :)\n",
+      "Actualmente hay 7 trabajadores en la empresa\n",
+      "---------------------------------------------\n",
+      "Se han despedido 7 trabajadores :(\n",
+      "Actualmente hay 0 trabajadores en la empresa\n",
+      "---------------------------------------------\n",
+      "Se ha despedido a un trabajador :(\n",
+      "Actualmente hay -1 trabajadores en la empresa\n"
+     ]
+    }
+   ],
    "source": [
     "dcchocolateria = Empresa(4)\n",
     "dcchocolateria.contratar_trabjador(3)\n",
@@ -518,11 +569,11 @@
     "        self.__numero_trabajadores = trabajadores\n",
     "        self.espacios_de_trabajo = 15\n",
     "\n",
-    "    @property\n",
+    "    @property #decorador getter\n",
     "    def numero_trabajadores(self):\n",
     "        return self.__numero_trabajadores\n",
     "\n",
-    "    @numero_trabajadores.setter\n",
+    "    @numero_trabajadores.setter #cambia valores\n",
     "    def numero_trabajadores(self, valor):\n",
     "        if valor > self.espacios_de_trabajo:\n",
     "            print(\"AVISO! Estás tratando de contratar más personas de las permitidas\")\n",
@@ -544,13 +595,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se han contratado 3 trabajadores :)\n",
+      "Actualmente hay 7 trabajadores en la empresa\n",
+      "---------------------------------------------\n",
+      "Se han despedido 7 trabajadores :(\n",
+      "Actualmente hay 0 trabajadores en la empresa\n",
+      "---------------------------------------------\n",
+      "Se ha despedido a un trabajador :(\n",
+      "Actualmente hay -1 trabajadores en la empresa\n"
+     ]
+    }
+   ],
    "source": [
     "dcchocolateria = Empresa(4)\n",
     "dcchocolateria.contratar_trabjador(3)\n",
@@ -650,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -686,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -694,9 +760,9 @@
    },
    "outputs": [],
    "source": [
-    "class Paris(Ciudad):\n",
+    "class Paris(Ciudad): #de que clase heredamos\n",
     "    def __init__(self, nombre, distancia, costo, popularidad):\n",
-    "        super().__init__(nombre, distancia,costo, popularidad)\n",
+    "        super().__init__(nombre, distancia,costo, popularidad) #toma refiriendonos a la clase padre\n",
     "\n",
     "    def visitar_torre_eiffel(self):\n",
     "        print(\"Solo aqui puedo ver la Torre Eiffel!!\")\n",
@@ -722,13 +788,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solo aqui puedo ver la Torre Eiffel!!\n",
+      "Solo aqui puedo ver el Empire State!!!\n"
+     ]
+    }
+   ],
    "source": [
     "ciudad_paris = Paris(\"Paris\", 11649, \"alto\", \"alta\")\n",
     "ciudad_nyc = NYC(\"Nueva York\", 8248, \"alto\", \"alta\")\n",
@@ -806,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -835,13 +910,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prefiere viajar a Paris en temporada baja\n",
+      "oh la la\n",
+      "Prefiere viajar a Nueva York en temporada baja\n",
+      "the city that never sleeps\n"
+     ]
+    }
+   ],
    "source": [
     "ciudad_paris = Paris(\"Paris\", 11649, \"alto\", \"alta\")\n",
     "ciudad_nyc = NYC(\"Nueva York\", 8248, \"alto\", \"alta\")\n",
@@ -907,13 +993,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Complejo object at 0x000001F48B742340>\n"
+     ]
+    }
+   ],
    "source": [
     "class Complejo:\n",
     "\n",
@@ -950,13 +1044,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 20i\n",
+      "Racional(10, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "class Complejo:\n",
     "\n",
@@ -1038,13 +1141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 20i\n"
+     ]
+    }
+   ],
    "source": [
     "class Complejo:\n",
     "\n",
@@ -1153,12 +1264,13 @@
     "class Festival():\n",
     "    \n",
     "    def __init__(self, nombre, maximo_personas, maximo_stages):\n",
-    "        # Completar\n",
-    "        pass\n",
+    "        self.nombre = nombre\n",
+    "        self.maximo_personas = maximo_personas\n",
+    "        self.maximo_stages = maximo_stages\n",
+    "        self.lista= [] \n",
     "\n",
     "    def agregar_stage(self, escenario):\n",
-    "        # Completar\n",
-    "        pass"
+    "        if len(self.lista):"
    ]
   },
   {
@@ -1196,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
